Finished Navbar and header but with vertical gap issues

--- a/Udemy/Modern Javascript (from novice to ninja)/Ability_Tester/Styles/General.css
+++ b/Udemy/Modern Javascript (from novice to ninja)/Ability_Tester/Styles/General.css
@@ -7,9 +7,6 @@ p{
     margin-top: 0px;
     margin-bottom: 0px;
 }
-.section__margin{
-    margin: 0 150px;
-}
 .root{
     height: max-content;
     width: 100%;
